# MatyOS

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  build_direct.py  build_executable.py  build_matyos.py  el_banners.py  el_buildmacos.py  el_cli.py  el_standalone.py  file_path.txt  icon_to_banner_converter.py  install-matyos.sh  install.ps1  install.sh  main.py  pyproject.toml  quick_build.bat  setup.py  test.el  tests.py  tokens.py
.github/workflows/: build.yml  matyos.yml
Formula/: el.rb
assets/icons/: README.md  generate_icons.py
compiler/: interpreter.py  lexer.py  main.py  parser.py  proof_checker.py  realistic_logic.py  semantic_analyzer.py  symbol_table.py
docs/: architecture.md  language.md  legacy-el-language.md  projects.md
examples/: 01_hello_world.el  02_calculator.el  03_fibonacci.el  04_file_operations.el  04_variables_demo.el  05_advanced_features.el  05_control_flow.el  axiomatic_method.el  calculator.el  fibonacci.el  graphics_demo.el  hello_world.el  proof_demo.el  propositional_proofs.el
examples/projects/arithmetic/: matyos.toml
examples/projects/arithmetic/theories/nat/: defs.elk  nat.prf  nat.test  nat.thm
examples/projects/logic/: matyos.toml
examples/projects/logic/theories/propositional/: conjectures.hyp  defs.elk  prop.prf  prop.test  prop.thm
examples/proofs/: auto.elk  curry_howard.elk  induction.elk  nat_by_tactics.elk  tactics.elk
grammar/: proof_assistant_grammar.md
kernel/: core.py  demo.py  demo_definitions.py  demo_equality.py  demo_inductive.py  demo_positivity.py  demo_prop.py  equality.py  inductive.py  surface.py
matyos/: __init__.py  __main__.py  cli.py
matyos/frontend/: surface.py  tactics.py
matyos/kernel/: core.py  equality.py  inductive.py
matyos/logic/: realistic.py
matyos/project/: engine.py
projects/projecto/: main.el  package.bring
src/: test.el
stdlib/: bool.elk  eq.elk  logic.elk  nat.elk
system/: package_installer.py  package_manager.py  reserved.py
system/builtin_functions/: main.py
tests/: test_cli.py  test_el.py  test_encoding.py  test_equality.py  test_inductive.py  test_kernel_core.py  test_library.py  test_project.py  test_realistic.py  test_scientific.py  test_surface.py  test_tactics.py
utils/: colors.py  constants.py  data_classes.py  errors.py
